# ikuai-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  publish.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
src/ikuai_mcp/: __init__.py  client.py  server.py
src/ikuai_mcp/tools/: advanced.py  auth.py  logs.py  network.py  qos_routing.py  security.py  settings.py  system.py  wireless.py
src/ikuai_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_imports.py  test_tools.py
